--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
-html{
-    font-size: larger;
+#video-player {
+    width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+#video-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+#video-list li {
+    width: 150px;
+    cursor: pointer;
 }
